[package]
name = "balltest-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glyphon = "0.10.0"
pollster = "0.4.0"
rand = "0.9.2"
wgpu = "28.0.0"
winit = {version = "0.30.12", features = ["android-native-activity"] } 
